-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018917 | 7u45 | Andrew Brygin | P2 | Closed | Fixed | b01 |
| JDK-2228901 | 7u40 | Andrew Brygin | P2 | Closed | Fixed | b06 |
2 JCK tests fails with VM chash starting from JDK8 b18 64 bit on linux x64.
api/java_awt/Image/ConvolveOp/index.html#FilterTesttestCase2
api/java_awt/Image/ConvolveOp/index.html#FilterTesttestCase1
java version "1.8.0-ea"
Java(TM) SE Runtime Environment (build 1.8.0-ea-b18)
Java HotSpot(TM) 64-Bit Server VM (build 23.0-b08, mixed mode)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f422b90a8f8, pid=19260, tid=139922427627280
#
# JRE version: 8.0-b18
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b08 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C [libmlib_image.so+0x18f8] mlib_ImageSet+0x18
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /export/jdk/hs_err_pid19260.log
Phoning home...
Using server: 10.161.186.18, port 4711
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
# The crash happened outside the Java Virtual Machine in native code.
# See problematic frame for where to report the bug.
#
See more in comments:
The same problem with api/java_awt/Image/AffineTransformOp/index.html#FilterTest1 :
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fcf6c1188f8, pid=15529, tid=140528867383040
#
# JRE version: 8.0-b30
# Java VM: Java HotSpot(TM) 64-Bit Server VM (24.0-b02 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C [libmlib_image.so+0x18f8] mlib_ImageSet+0x18
api/java_awt/Image/ConvolveOp/index.html#FilterTesttestCase2
api/java_awt/Image/ConvolveOp/index.html#FilterTesttestCase1
java version "1.8.0-ea"
Java(TM) SE Runtime Environment (build 1.8.0-ea-b18)
Java HotSpot(TM) 64-Bit Server VM (build 23.0-b08, mixed mode)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f422b90a8f8, pid=19260, tid=139922427627280
#
# JRE version: 8.0-b18
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b08 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C [libmlib_image.so+0x18f8] mlib_ImageSet+0x18
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /export/jdk/hs_err_pid19260.log
Phoning home...
Using server: 10.161.186.18, port 4711
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
# The crash happened outside the Java Virtual Machine in native code.
# See problematic frame for where to report the bug.
#
See more in comments:
The same problem with api/java_awt/Image/AffineTransformOp/index.html#FilterTest1 :
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fcf6c1188f8, pid=15529, tid=140528867383040
#
# JRE version: 8.0-b30
# Java VM: Java HotSpot(TM) 64-Bit Server VM (24.0-b02 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C [libmlib_image.so+0x18f8] mlib_ImageSet+0x18
- backported by
-
JDK-2228901 VM chash in JCK api/java_awt/Image/ConvolveOp/ tests for 64 bit jdk8 on linux.
-
- Closed
-
-
JDK-8018917 VM crash in JCK api/java_awt/Image/ConvolveOp/ tests for 64 bit jdk8 on linux.
-
- Closed
-
- duplicates
-
JDK-7167785 SIGSEGV in mlib_ImageSet in JDK 8
-
- Closed
-
-
JDK-7190936 TEST_BUG: closed/java/awt/print/PrinterJob/DrawImage.java fails with SIGSEGV JVM crash
-
- Closed
-